add ditto update

--- a/journal/201911.md
+++ b/journal/201911.md
@@ -310,6 +310,28 @@ The Decred Assembly featured a [Deep Dive on 1.5 rc1 with Dave Collins](https://
 
 https://xaur.github.io/writings/posts/20191127-marketing-strategies.html (discussion https://www.reddit.com/r/decred/comments/e2lhwd/marketing_strategies/ )
 
+Ditto’s November achievements:
+
+Secured 9 pieces of media coverage:  
+
+- [An op-ed for Jake in Cointelegraph](https://cointelegraph.com/news/secrets-they-missed-at-devcon-what-its-really-like-in-a-working-dao) titled “Secrets They Missed at DevCon: What It’s Really Like in a Working DAO”.  	
+- [A podcast](https://podcasts.apple.com/us/podcast/base-layer-episode-086-jake-yocom-piatt-decred/id1445373535?i=1000457565007) with Jake on the Base Layer Podcast with David Nage.  	
+- [An article](https://www.forbes.com/sites/cbovaird/2019/11/11/who-will-win-the-race-for-digital-currency-supremacy/#127918b9eb3c) in Forbes featuring Jake’s commentary on the race between governments, corporations, and decentralized cryptocurrencies to remake the financial system.
+- Coordinated [an interview](https://podcasts.apple.com/us/podcast/market-disruptors/id1463411709?ign-mpt=uo%3D4) for Jake on the Market Disruptors podcast.
+- [Two feature articles](https://cryptotradernews.com/technology/our-data-privacy-is-under-attack-decred-is-fighting-back/) on Decred’s privacy in a new crypto outlet called Crypto Trader News.  	
+- [An interview](https://www.youtube.com/watch?v=4r6z9JZxRRI&feature=push-u-sub&attr_tag=bm3arX6J3VaJ0pej%3A6) between Akin and the Nakamoto News Network at the World Crypto Conference in Las Vegas.  	
+- [A podcast](https://messari.io/podcast/developer-funding-governance-and-the-evolution-of-decred-with-jake-yocom-piat) with Jake on Messari’s Unqualified Opinions podcast about developer funding, governance, and Decred.  	
+- A [A TV appearance](https://blocktv.com/watch/2019-10-30/5db9ab4487a7e-resolving-corporate-governance-in-cryptocurrency) on BlockTV about resolving corporate governance in cryptocurrency. 
+
+Also:
+
+- Liz Bagot [appeared on the Decred in Depth podcast](https://podcasts.apple.com/us/podcast/liz-bagot-pr-marketing/id1466716734?i=1000455667566.) to talk about Ditto’s work with Decred.
+- Supported Decred’s media presence at Web Summit. Secured an interview with BBC, and facilitated meetings with CoinDesk and Cointelegraph. We also created a briefing book of top-tier journalists for the Decred team to speak with and helped Marco prep for his panel discussion in order to maximize their impact at the event.  	
+- Supported Akin’s presence at the World Crypto Conference in Las Vegas by setting up on-the-ground interviews with media outlets including Legacy Research, Nakamoto News Network, Crypto TV News, and others.
+- Secured several podcasts and online interviews for various community members.  	
+- Identified and shared opportunities for the community to engage with Crypto Twitter and educate outsiders about Decred.  	
+- Worked closely to support the Decred developer community’s achievements over the last year.
+
 ## Events
 
 Attended:
@@ -442,8 +464,6 @@ Aragon [completed](https://blog.aragon.org/final-results-from-aragon-network-vot
 
 Aragon Court [launched](https://blog.aragon.org/aragon-court-is-live-on-mainnet/) on mainnet, it is a system for adjudicating "subjective disputes that cannot be resolved by smart contracts". ANT holders can stake their tokens for ANJ tokens, which can then be staked to participate in adjudication on cases brought before the court. Decisions are made through a Schelling game where those who guess the majority decision are rewarded and those who guess wrong have their stake slashed. Registration to become ANJ jurors is set to begin in Jan 2020.
 
-
-
 Dragonfly research published an [article](https://medium.com/dragonfly-research/breaking-mimblewimble-privacy-model-84bcd67bfe52) about "breaking Mimblewimble's privacy model" by monitoring the network in real time. @jy-p had identified this issue as part of his review of privacy solutions, and subsequently discussed it on the base layer [podcast](https://acrabaselayer.podbean.com/e/base-layer-episode-086-jake-yocom-piatt-decred/).
 
 An "Unknown Fund" was [announced](https://www.unknown.fund/press-release), pledging to invest and donate $75 Million in Bitcoin for the startups which directly or indirectly support the idea of anonymity. "Preference will be given to the following niches: protection of personal data, tools for anonymity, cryptocurrency and blockchain." The fund is quite opaque, only saying that "Applications are closed for the Unknown Fund.  Evaluation will take a few months."
@@ -454,9 +474,9 @@ The EOS blockchain [entered](https://cointelegraph.com/news/eos-blockchain-conge
 
 Block.one [announced](https://cointelegraph.com/news/eos-creator-blockone-to-vote-for-block-producers-with-95-of-coins) that it is going to begin voting for block producers with the 9.5% of EOS it controls - classifying itself as a “Small, but significant EOS token holder”. Block.one did not announce how they will be voting.
 
-EOS New York [tweeted](https://twitter.com/eosnewyork/status/1199813240307568641) to uncover the fact that 6 of the registered EOS BPs appear to be operated by the same entity. Although the BPs in question are not in the top 21 active BPs, they were receiving rewards regularly as standby BPs.
+EOS New York [tweeted](https://twitter.com/eosnewyork/status/1199813240307568641) to uncover the fact that 6 of the registered EOS BPs appear to be operated by the same entity. Although the BPs in question are [not in the top 21 active BPs](https://twitter.com/BlockCommons/status/1200133433009287168), they were receiving rewards regularly as standby BPs.
 
-Tezos supply-demand dynamics {worthy?} https://twitter.com/john_iller/status/1197984641761923073
+Tezos supply-demand dynamics {worthy? rr: imo, no} https://twitter.com/john_iller/status/1197984641761923073
 
 {DEX}
 
@@ -464,19 +484,18 @@ Tezos supply-demand dynamics {worthy?} https://twitter.com/john_iller/status/119
 
 {relevant exchanges and websites}
 
-BitMEX leaked their email database "by accident". Software is hard https://twitter.com/jchervinsky/status/1190171229031936000
+BitMEX unfortunately [leaked](https://www.coindesk.com/bitmex-exchange-exposes-user-base-in-email-mishap) their email database by sending an email to everyone using cc instead of bcc. Oops. This leads to targeting of users, revealing one aspect of their identity to parties with mal-intent. 
 
-https://www.coindesk.com/bitmex-exchange-exposes-user-base-in-email-mishap
+
 
 Delisting of privacy coins such as Monero, Zcash, Dash and others (_missed in Sep_):
 
 - OKEx Korea
-  - announced Sep 10 https://cointelegraph.com/news/report-okex-delisting-monero-dash-privacy-cryptos-over-fatf-demands
-  - implemented Oct 10, although delisting of DASH and ZEC was halted https://cointelegraph.com/news/cryptocurrency-exchange-okex-delists-xmr-dash-zec-zen-sbtc
-  - https://www.coindesk.com/okex-korea-reviewing-decision-to-delist-privacy-coins-zcash-and-dash
-- Upbit announced Sep 20 https://cointelegraph.com/news/upbit-exchange-delists-privacy-coins-due-to-money-laundering-concerns
+  - [announced](https://cointelegraph.com/news/report-okex-delisting-monero-dash-privacy-cryptos-over-fatf-demands) Sep 10
+  - [implemented](https://cointelegraph.com/news/cryptocurrency-exchange-okex-delists-xmr-dash-zec-zen-sbtc) Oct 10, although delisting of DASH and ZEC was halted and is under [review](https://www.coindesk.com/okex-korea-reviewing-decision-to-delist-privacy-coins-zcash-and-dash)
+- Upbit [announced](https://cointelegraph.com/news/upbit-exchange-delists-privacy-coins-due-to-money-laundering-concerns) Sep 20 
 
-Virgin Bitcoins are 10-30% more expensive than Bitcoins with history, according to a [blog](https://medium.com/@official_83664/what-are-virgin-bitcoins-and-where-can-i-buy-them-d6eab0f669e0) by Vertex Marketplace. This should be no surprise to anyone who understands fungibility. {rr: is this a reliable source? it's selling a virgin bitcoin service... doesn't quote anything for the 10-30% markup stat}
+Virgin Bitcoins are 10-30% more expensive than Bitcoins with history, according to a [blog](https://medium.com/@official_83664/what-are-virgin-bitcoins-and-where-can-i-buy-them-d6eab0f669e0) by Vertex Marketplace. This should be no surprise to anyone who understands fungibility. {rr: is this a reliable source? it's selling a virgin bitcoin service... doesn't quote anything for the 10-30% markup stat, looks like a probable marketing stunt}
 
 Bittrex has [adopted](https://www.coindesk.com/bittrex-chainalysis-kyt) Chainalysis [Know Your Transaction](https://blog.chainalysis.com/reports/real-time-alerts-press-release) software that monitors 15 cryptoassets for suspicious activity in real-time. (_missed in Sep_).
 
@@ -488,11 +507,11 @@ https://www.reddit.com/r/ethtrader/comments/dwiu4f/donutsonethereum_registration
 
 U.S. Federal Reserve is [hiring](https://cointelegraph.com/news/us-federal-reserve-hiring-new-manager-to-research-digital-currencies) a manager to research digital currencies for up to $250K a year.
 
-U.S. Fed [announced](https://www.newyorkfed.org/markets/opolicy/operating_policy_191114) that they will "offer three additional term repo operations with longer maturities that extend past the end of 2019". This measure is an addition to existing 1-day and 14-day repo operations and purchases of Treasury bills.
+{U.S. Fed [announced](https://www.newyorkfed.org/markets/opolicy/operating_policy_191114) that they will "offer three additional term repo operations with longer maturities that extend past the end of 2019". This measure is an addition to existing 1-day and 14-day repo operations and purchases of Treasury bills.
 
 If you ever wondered who gets the repo money, you will have to [wait](http://gata.org/node/19583) two years.
 
-The Fed itself [admitted](https://realinvestmentadvice.com/powells-fantasy-the-economy-should-grow-faster-than-debt/) that U.S. national debt growing faster than nominal GDP is "not sustainable", shortly after the debt exceeded $23 trillion. Interestingly, he said it's not the Fed's job to fix it. The debt has two sides. On the one side, someone is creating demand by taking more and more debt. On the other side, the Fed is making the debt drug much more accessible by cutting rates, lending money to banks and "purchasing" assets like stocks and bonds. Something nobody wants to talk about is where the this money comes from.
+The Fed itself [admitted](https://realinvestmentadvice.com/powells-fantasy-the-economy-should-grow-faster-than-debt/) that U.S. national debt growing faster than nominal GDP is "not sustainable", shortly after the debt exceeded $23 trillion. Interestingly, he said it's not the Fed's job to fix it. The debt has two sides. On the one side, someone is creating demand by taking more and more debt. On the other side, the Fed is making the debt drug much more accessible by cutting rates, lending money to banks and "purchasing" assets like stocks and bonds. Something nobody wants to talk about is where the this money comes from.}
 
 U.S. companies are [stacking up cash](https://www.axios.com/businesses-spending-indicators-recession-533481fc-dba7-4b5c-add4-c11628c335bc.html) to prepare for an economic downturn. A notable quote from the Axios story: "Data from the Investment Company Institute shows that even though the stock market has risen by nearly 25% this year, investors have been net sellers of stocks, pulling $100 billion out of equity funds.". A Zero Hedge [article](https://www.zerohedge.com/markets/conundrum-2019-equity-outflows-are-biggest-ever-yet-stocks-are-all-time-highs-what-happens) shows a weird phenomena of money flowing out of equities yet the prices keeps setting new ATHs. How is that possible? Some factors making it possible are the companies themselves being the biggest buyers (stock buybacks), central banks creating money that flows into stocks, paired with a simultaneous decline of trading volume.
 
@@ -500,7 +519,7 @@ The "fun" part in these dynamics where investors are [moving to cash](https://ww
 
 Global debt is hitting all-time highs. The numbers vary by the source: $188 trillion and 230% of the world output figure comes from [IMF chief](https://www.ibtimes.com/global-debt-surges-record-high-188-tn-imf-chief-2861715), while $250 trillion and 320% of world output figure is from [Axios](https://www.axios.com/capital-markets-eye-world-soaring-debt-400f9f37-46b5-45ad-9487-c09ba8958c09.html), which cited Institute of International Finance.
 
-Certain physical security providers report an increased [demand](https://www.bloomberg.com/news/articles/2019-11-20/world-s-rich-are-rattled-and-looking-for-old-fashioned-security) for safe desit boxes to store precious metals, cash and cryptocurrency. The motives cited are fears of a global recession, avoidance of negative interest rates and natural disasters.
+Certain physical security providers report an increased [demand](https://www.bloomberg.com/news/articles/2019-11-20/world-s-rich-are-rattled-and-looking-for-old-fashioned-security) for safe deposit boxes to store precious metals, cash and cryptocurrency. The motives cited are fears of a global recession, avoidance of negative interest rates and natural disasters.
 
 Several U.S. organizations acted in concert to "deflate the bitcoin bubble of 2017" according to a CoinDesk [story](https://www.coindesk.com/trump-administration-popped-2017-bitcoin-bubble-ex-cftc-chair-says). "One of the untold stories of the past few years is that the CFTC, the Treasury, the SEC and the \[National Economic Council\] director at the time, Gary Cohn, believed that the launch of bitcoin futures would have the impact of popping the bitcoin bubble. And it worked.". While the move is presented as helping the market by "popping the bubble", giving traders the ability to "express a pessimistic view" even if they _don't own_ the asset, and preventing "believer's market", it somewhat reminds of the smart use of futures [in 1974](http://www.gata.org/node/17081) to increase volatility of gold and discourage people from holding it. _(missed in October)_
 
