Intro update + Dev dcrd

--- a/journal/201911.md
+++ b/journal/201911.md
@@ -6,9 +6,10 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 {introduction, major news of the month ordered by impact}
 
+- new RCs
 - LN ticket splitting
 
-## RC2
+## RC2/3
 
 {changes since rc1}
 
@@ -18,39 +19,21 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 ## Development
 
-{add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans}
+[dcrd](https://github.com/decred/dcrd):
 
-[dcrd](https://github.com/decred/dcrd): {}
+Performance enhancements, backporting of changes to the v1.5 release, code cleanup.
 
-Code cleanup, backporting of changes to the v1.5 release branch, performance enhancements.
+While v1.5 is awaiting its final release, development is moving towards the [1.6.0](https://github.com/decred/dcrd/milestone/24) milestone.
 
-Block traversal performance enhanced by introducing a [deterministic skip list](https://github.com/decred/dcrd/pull/2010). 
+[`regentemplate`](https://github.com/decred/dcrd/pull/1979) command introduced to force the generation of latest template with any new transactions.
 
-More robust and objective method [introduced](https://github.com/decred/dcrd/pull/2000) for calculating total known work on the chain. This method is valid regardless of the order that blocks are received and process and does not rely on previously calculated checkpoints. 
+Mempool changed to [evict](https://github.com/decred/dcrd/pull/1982) any remaining orphan transactions when the peer they sent from disconnects and to [modify](https://github.com/decred/dcrd/pull/1984) orphan tx policy in accordance with recent improvements.
 
-Caching [added](https://github.com/decred/dcrd/pull/2002) for least recently used key/value. {SB: what does this give us? not seeing any description on commit or PR…}
+New chain parameter [added](https://github.com/decred/dcrd/pull/2000) for specifying minimum total known work of the chain. The code checking whether the chain is current is updated to use total work instead of height of the final checkpoint. This method does not rely on trusted known checkpoints, is valid regardless of the order that blocks are received and processed, and, in general, is a more objective value that can't be invalidated by a chain reorg.
 
-New [test function](https://github.com/decred/dcrd/pull/2004) separates block processing tests (duplicates blocks, orphan blocks, reorgs, etc.) from consensus rule tests. 
+`lru` package was [extended](https://github.com/decred/dcrd/pull/2002) to allow insertion and retrieval of key-value pairs (in addition to just values).
 
-- blockchain: Remove unused error from HaveBlock.: https://github.com/decred/dcrd/pull/2007
-
-- [release-v1.5] sampleconfig: add export dcrctl sample config: https://github.com/decred/dcrd/pull/2006
-
-- [release-v1.5] rpcserver: Cleanup getvoteinfo RPC.: https://github.com/decred/dcrd/pull/2005
-
-- sampleconfig: add export dcrctl sample config: https://github.com/decred/dcrd/pull/2003
-
-- multi: remove global activeNetParams: https://github.com/decred/dcrd/pull/1999
-
-- blockmanager: Simplify dynamic peer height updates: https://github.com/decred/dcrd/pull/1998
-
-- blockchain: Rename KnownValid to HasValidated.: https://github.com/decred/dcrd/pull/1997
-
-- blockchain: Rename KnownValid to HasValidated.: https://github.com/decred/dcrd/pull/1997
-
-- blockchain: Remove unconfigurable chain var.: https://github.com/decred/dcrd/pull/1996 
-
-- sounds very interesting, need more info https://github.com/decred/dcrd/pull/2000
+Block ancestor traversal significantly optimized by introducing a [deterministic skip list](https://github.com/decred/dcrd/pull/2010).
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
