--- a/journal/201911.md
+++ b/journal/201911.md
@@ -43,55 +43,17 @@ Method added to detect [reused addresses](https://github.com/decred/dcrwallet/pu
 
 Issues preventing VSP ticket buying [addressed](https://github.com/decred/dcrwallet/pull/1618). { what issues? did VSP ticket buying break? was it in master or in a v1.5 RC? }
 
-[Decrediton](https://github.com/decred/decrediton): {}
+[Decrediton](https://github.com/decred/decrediton):
 
-Numerous bug fixes, UI tweaks, code cleanup.
+Numerous bug fixes and UI tweaks, code cleanup.
 
-Choice added to [create](https://github.com/decred/decrediton/pull/2310) LN account during setup. This incentivizes users to not user their default wallet account, which could cause many channels to be automatically opened if the autopilot feature was selected {SB: is there any other reason to do this? to increase adoption?}
+Toggle added to [create](https://github.com/decred/decrediton/pull/2310) LN-specific wallet account when first initializing an LN wallet. This incentivizes users to not use their default wallet account which is likely to have the majority of their funds, which could cause many channels to be automatically opened if the autopilot feature was selected.
 
-Improvements to [info modals](https://github.com/decred/decrediton/issues/2285). 
+New batch of [responsive views](https://github.com/decred/decrediton/pulls?q=is%3Apr+merged%3A2019-11-01..2019-11-30+responsive) implemented.
 
-- Fix imported account showing 0: https://github.com/decred/decrediton/pull/2348
+Multiple bugs found during the testing of RC1 and RC2 were fixed.
 
-- [fonts] Fix Incosolata in wrong places: https://github.com/decred/decrediton/pull/2346'
-‘
-- [Governance] Cast vote fixes at proposal details page: https://github.com/decred/decrediton/pull/2342
-
-- [multi] Fix spv link spacing and repeated VSP notification: https://github.com/decred/decrediton/pull/2340
-
-- NumTicketsInput enhancements: https://github.com/decred/decrediton/pull/2339
-
-- NumTicketsInput enhancements: https://github.com/decred/decrediton/pull/2339
-
-- [send] Fix misalignament and shadow: https://github.com/decred/decrediton/pull/2338
-
-- [actions] Fix save settings: https://github.com/decred/decrediton/pull/2328
-
-- Fix background color on Receive DCR view: https://github.com/decred/decrediton/pull/2326
-
-- [lint] Add comma-dangle rule: https://github.com/decred/decrediton/pull/2324
-
-- [lint] New version of babel-loader spreader fixes: https://github.com/decred/decrediton/pull/2323
-
-- Fix Stake info details error and clean up: https://github.com/decred/decrediton/pull/2322
-
-- upgrade jest: https://github.com/decred/decrediton/pull/2321
-
-- Multi fixes: https://github.com/decred/decrediton/pull/2320
-
-- Fix close wallet button missin in smaller screens: https://github.com/decred/decrediton/pull/2315
-
-- [ipc] Fix refresh page not connecting to daemon: https://github.com/decred/decrediton/pull/2313
-
-- Fix overview chart buttons misalignments: https://github.com/decred/decrediton/pull/2309
-
-- Revert dropdown skin everywhere but in seedword dropdowns’: https://github.com/decred/decrediton/pull/2301'
-
-- [MULTI] Fix Purchase Tickets visual design issues: https://github.com/decred/decrediton/pull/2300
-
-- [launcher] Fixes various issues with dcrd config loading: https://github.com/decred/decrediton/pull/2297
-
-- Add modal to open proposal link: https://github.com/decred/decrediton/pull/2294
+In total 54 pull requests were [merged](https://github.com/decred/decrediton/pulls?q=is%3Apr+merged%3A2019-11-01..2019-11-30) in November.
 
 [Politeia](https://github.com/decred/politeia): {}
 
