--- a/journal/201911.md
+++ b/journal/201911.md
@@ -63,10 +63,11 @@ Building politeiavoter on [Windows](https://github.com/decred/politeia/pull/1046
 
 Implementation of [RFP process](https://github.com/decred/politeia/pull/1054) has started.
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): {}
+[dcrstakepool](https://github.com/decred/dcrstakepool):
 
-Work continues to [enable](https://github.com/decred/dcrstakepool/pull/571) voting outside of dcrwallet, allowing users to arbitrarily vote on tickets whose voting rights they have the private key for. {SB: potential applications of this ability?}
-- progress of address reuse elimination
+Work started to [enable](https://github.com/decred/dcrstakepool/pull/571) arbitrarily voting on tickets whose voting rights the server has the private key for. { what is this for? }
+
+Work continues to implement [per-ticket](https://github.com/decred/dcrstakepool/issues/568) authentication and ticket purchasing to remove user accounts, voting address reuse and the email requirement.
 
 [dcrpool](https://github.com/decred/dcrpool): {}
 
