--- a/journal/201911.md
+++ b/journal/201911.md
@@ -71,23 +71,11 @@ Work continues to implement [per-ticket](https://github.com/decred/dcrstakepool/
 
 [dcrpool](https://github.com/decred/dcrpool): work in progress to add extensive [test coverage](https://github.com/decred/dcrpool/pull/141).
 
-[dcrlnd](https://github.com/decred/dcrlnd): {}
+[dcrlnd](https://github.com/decred/dcrlnd):
 
-Bug fixes, improved tests…
+Bug fixes, improved tests and build infrastructure.
 
-Build variables [modified](https://github.com/decred/dcrlnd/commit/88ccb032e2bc0bcf4072ce5a460466b01a86b8b2) to be more like other Decred software. 
-
-Asset package (originally created for dcrwallet) [introduced](https://github.com/decred/dcrlnd/commit/16f527454a82ab033d51a56bf92006d0dccf495c) to deterministically obtain a copy of the sample dcrlnd config. 
-
-Dockerfile [updated](https://github.com/decred/dcrlnd/commit/cb98a628ea773bebc79c543ede0ebb659c99b697) for dcrlnd. Test [improved](https://github.com/decred/dcrlnd/pull/52) following GitHub actions failures. 
-
-Test for rare [race condition](https://github.com/decred/dcrlnd/commit/b5fbd6a0e4cb7a15cfcf40f97322206a25d80709) added.
-
-- More improvement to tests after github actions failures: https://github.com/decred/dcrlnd/pull/52
-
-- Fix zpay decode: https://github.com/decred/dcrlnd/pull/59
-
-- config: dcrwallet updated with activenetparam: https://github.com/decred/dcrlnd/pull/61
+Dockerfile [updated](https://github.com/decred/dcrlnd/pull/56) for dcrlnd.
 
 [cspp](https://github.com/decred/cspp): {}
 
