--- a/journal/201911.md
+++ b/journal/201911.md
@@ -216,7 +216,7 @@ New merchants:
 
 ## Outreach
 
-November featured Decred at a number of high profile events across the world. Many of the same team members from last year returned this year to Websummit in Lisbon, Portugal, where Decred was one of the only crypto projects to exhibit and speak. Marco Peereboom represented the crypto industry on a panel titled, "Can You Trust Your Bank," which can be viewed [here](https://vimeo.com/375884648). [Dominic represented Decred at the 2019 Global Blockchain Summit in Wuzhen, China on November 7-9](https://twitter.com/wanbihou/status/1193218449721311233?s=20). 
+November featured Dechttps://charts.dcr.farm/red at a number of high profile events across the world. Many of the same team members from last year returned this year to Websummit in Lisbon, Portugal, where Decred was one of the only crypto projects to exhibit and speak. Marco Peereboom represented the crypto industry on a panel titled, "Can You Trust Your Bank," which can be viewed [here](https://vimeo.com/375884648). [Dominic represented Decred at the 2019 Global Blockchain Summit in Wuzhen, China on November 7-9](https://twitter.com/wanbihou/status/1193218449721311233?s=20). 
 
 Dustorf shared drafts of all new decred.org subpages in the writers room, and after community input, everything has been submitted to Eeter for final assembly, testing and publication. 
 
@@ -354,9 +354,9 @@ Selected Twitter highlights:
 
 ## Markets
 
-In November DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average daily rate was ${n.nn}.
+In November DCR was trading between USD 15.68-24.73 / BTC 0.0020-0.0029. The average daily rate was $19.97.
 
-{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
+{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis} {Anything significant ?}
 
 ## Relevant External
 
