--- a/journal/201911.md
+++ b/journal/201911.md
@@ -367,7 +367,7 @@ Decred adds another dimension whereby the legitimacy of the chain is established
 
 Resolution of the ZEC trademark issue allowed [polling](https://www.zfnd.org/blog/community-sentiment-collection-poll/) for NU4 to proceed, where the Zcash ecosystem/community can signal support for 13 options to fund development. The EFF and Zcash Foundation will consider the results from 3 [or 4](https://twitter.com/zooko/status/1200917828011876352) different polling methods when deciding what plan to adopt.
 
-Aragon [completed](https://blog.aragon.org/final-results-from-aragon-network-vote-4/) its 4th AGP voting round, 15 proposals were voted on and ANT participation was around 3-18%. Among the approved proposals was [AGP-103](https://github.com/aragon/AGPs/blob/master/AGPs/AGP-103.md), introducing a network budget of 5% Treasury value or 250,000 DAI (whichever is greater) per quarterly voting cycle. The largest proposal to be approved (with 9% turnout, 91% approval) is [AGP-106](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-106.md) to develop and launch Aragon Chain, at a cost of $500,000. The aim is to create a new layer 1 protocol and offer it as an alternative to the Ethereum-based Aragaon network. Among the reasons cited were increasing costs of keeping up with changes to the Ethereum network's changes. [AGP-112](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-112.md), which also passed, issued a proclamation that Aragon is opposed to ProgPoW on Ethereum, or any other non-emergency change to mining algorithm before Ethereum 2.0. The highest turnout proposal was [AGP-81](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-81.md), with 17% of ANT turning out to vote no on a collaboration with Kleros on the court system.
+Aragon [completed](https://blog.aragon.org/final-results-from-aragon-network-vote-4/) its 4th AGP voting round, 15 proposals were voted on and ANT participation was around 3-18%. Among the approved proposals was [AGP-103](https://github.com/aragon/AGPs/blob/master/AGPs/AGP-103.md), introducing a network budget of 5% Treasury value or 250,000 DAI (whichever is greater) per quarterly voting cycle. The largest proposal to be approved (with 9% turnout, 91% approval) is [AGP-106](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-106.md) to develop and launch Aragon Chain, at a cost of $500,000. The aim is to create a new layer 1 protocol and offer it as an alternative to the Ethereum-based Aragon network. Among the reasons cited were increasing costs of keeping up with changes to the Ethereum network's changes. [AGP-112](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-112.md), which also passed, issued a proclamation that Aragon is opposed to ProgPoW on Ethereum, or any other non-emergency change to mining algorithm before Ethereum 2.0. The highest turnout proposal was [AGP-81](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-81.md), with 17% of ANT turning out to vote no on a collaboration with Kleros on the court system.
 
 Aragon Court [launched](https://blog.aragon.org/aragon-court-is-live-on-mainnet/) on mainnet, it is a system for adjudicating "subjective disputes that cannot be resolved by smart contracts". ANT holders can stake their tokens for ANJ tokens, which can then be staked to participate in adjudication on cases brought before the court. Decisions are made through a Schelling game where those who guess the majority decision are rewarded and those who guess wrong have their stake slashed. Registration to become ANJ jurors is set to begin in Jan 2020.
 
@@ -434,7 +434,7 @@ During October [protests](https://twitter.com/dalalmawad/status/1186705664229466
 
 GitHub has [removed](https://techcrunch.com/2019/10/30/github-removes-tsunami-democratics-apk-after-a-takedown-order-from-spain/) the APK of an app for organizing protests in Catalonia, acting on a court takedown request sent by Spain's national police force.
 
-CEO of Mongoila-based IDAX exchange has [disappeared](https://idax.zendesk.com/hc/en-us/articles/360037327571-Urgent-announcement-about-current-situation-of-IDAX-Global) together with keys from exchange's cold storage. Five days prior to that the exchange has announced withdrawal [problems](https://idax.zendesk.com/hc/en-us/articles/360036736211-Announcement-of-IDAX-withdrawal-channel-congestion) and that it will no longer serve users in [China](https://idax.zendesk.com/hc/en-us/articles/360036736691-IDAX-no-longer-provide-services-for-users-in-China). This is reminiscent of the case of Canadian QuadrigaCX whose CEO  mysteriously disappeared, also with the keys. The takeaways here are: have several backup people with the keys if you run an important service, screen your exchange and ideally, contribute to replacing custodial exchanges with [non-custodial](https://github.com/decred/dcrdex) ones.
+CEO of Mongolia-based IDAX exchange has [disappeared](https://idax.zendesk.com/hc/en-us/articles/360037327571-Urgent-announcement-about-current-situation-of-IDAX-Global) together with keys from exchange's cold storage. Five days prior to that the exchange has announced withdrawal [problems](https://idax.zendesk.com/hc/en-us/articles/360036736211-Announcement-of-IDAX-withdrawal-channel-congestion) and that it will no longer serve users in [China](https://idax.zendesk.com/hc/en-us/articles/360036736691-IDAX-no-longer-provide-services-for-users-in-China). This is reminiscent of the case of Canadian QuadrigaCX whose CEO  mysteriously disappeared, also with the keys. The takeaways here are: have several backup people with the keys if you run an important service, screen your exchange and ideally, contribute to replacing custodial exchanges with [non-custodial](https://github.com/decred/dcrdex) ones.
 
 A trojan-enabled version of Tor browser was [targeting](https://www.welivesecurity.com/2019/10/18/fleecing-onion-trojanized-tor-browser/) Bitcoin users, discovered by ESET. The trojan version was spreading from `tor-browser[.]org` and `torproect[.]org` domains.
 
