People add missed dcrios

--- a/journal/201911.md
+++ b/journal/201911.md
@@ -134,6 +134,8 @@ Dev activity stats for November: 173 active PRs, 342 master commits, 72K added a
 
 Welcome to new first time contributors with code merged to master: zeoio ([dcrdex](https://github.com/decred/dcrdex/commits?author=zeoio)), githubsands ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=githubsands)), eharris128 ([dcrweb](https://github.com/decred/dcrweb/commits?author=eharris128)).
 
+Two new contributors missed by our detection earlier: neddoz ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=neddoz) since Jun), quacklabs ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=quacklabs), since Sep)). Welcome aboard!
+
 Community stats:
 
 - Politeia users: {} (+{})
