--- a/journal/201911.md
+++ b/journal/201911.md
@@ -458,6 +458,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-- writing and editing: bee, Dustorf, richardred, s\_ben
-- reviews and feedback: akinsawyerr, chappjc, davecgh, lukebp, Haon, emiliomann
+- writing and editing: bee, Ditto Team, Dustorf, richardred, s\_ben
+- reviews and feedback: akinsawyerr, chappjc, davecgh, lukebp, matheusd, Haon, emiliomann
 - title image: saender
