--- a/journal/201911.md
+++ b/journal/201911.md
@@ -134,7 +134,7 @@ Dev activity stats for November: 173 active PRs, 342 master commits, 72K added a
 
 Welcome to new first time contributors with code merged to master: zeoio ([dcrdex](https://github.com/decred/dcrdex/commits?author=zeoio)), githubsands ([dcrlnd](https://github.com/decred/dcrlnd/commits?author=githubsands)), eharris128 ([dcrweb](https://github.com/decred/dcrweb/commits?author=eharris128)).
 
-Two new contributors missed by our detection earlier: neddoz ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=neddoz) since Jun), quacklabs ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=quacklabs), since Sep)). Welcome aboard!
+Two new contributors missed by our detection earlier: neddoz ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=neddoz) since Jun), quacklabs ([dcrios](https://github.com/raedahgroup/dcrios/commits?author=quacklabs), since Sep). Welcome aboard!
 
 Community stats:
 
@@ -152,7 +152,7 @@ Community stats:
 
 ## Governance
 
-In November the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,096 DCR and spent 17,889 DCR. Using November's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At Octobers's average daily rate of ${n.nn}, the USD figure billed for work completed in that month is ${n}K. As of Dec 2, Treasury balance is 640,201 DCR, ($12.4 million USD at $19.44).
+In November the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,096 DCR and spent 17,889 DCR. Using November's daily average DCR/USD rate of $19.97, this is $281K received and $357K spent. At Octobers's average daily rate of $15.59, the USD figure billed for work completed in that month is $279K. As of Dec 2, Treasury balance is 640,201 DCR, ($12.4 million USD at $19.44).
 
 There were two new proposals submitted, one for $650 for a DCR version of Point of Sale app [PlusBit](https://proposals.decred.org/proposals/e559188b0febcab29c49c1f7dd5c66645e31be00894a150ef7d0b8ceb6486605), and one by @buck54321 requesting $30,000 for continued development of [TinyDecred](https://proposals.decred.org/proposals/ad0f9688b3467734e2581604914b2cc32c6eb7991dff460eff41d21f66d88451). Voting started for both proposals on Dec 3.
 
@@ -160,7 +160,7 @@ The [proposal](https://proposals.decred.org/proposals/5af0ce1cd325be6be39109c275
 
 @richardred produced a [report](https://www.blockcommons.red/publication/mm-tracking-1/) into the DCR order books from mid-October to mid-November, as i2 Trading started making DCR markets in line with their approved [proposal](https://proposals.decred.org/proposals/2eb7ddb29f151691ba14ac8c54d53f6692c1f5e8fe06244edf7d3c33fb440bd9). The additional liquidity is available, although according to the way it has been measured over this timeframe (where price volatility created difficult conditions), it was probably not available with 90% uptime across all exchanges and pairs. 
 
-For more in depth coverage of Politeia activity see Politeia Digest [Issue 25](https://blockcommons.red/politeia-digest/issue025/). 
+For more in depth coverage of Politeia activity see Politeia Digest [issue 25](https://blockcommons.red/politeia-digest/issue025/). 
 
 ## Network
 
