--- a/journal/201911.md
+++ b/journal/201911.md
@@ -7,8 +7,9 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 {introduction, major news of the month ordered by impact}
 
 - new RCs
-- LN ticket splitting
 - DEX development?
+- Latam marketing approved
+- LN ticket splitting
 
 ## RC2/3
 
@@ -164,26 +165,19 @@ For more in depth coverage of Politeia activity see Politeia Digest [issue 25](h
 
 ## Network
 
-{cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers}
+Hashrate: November's hashrate opened at ~442 Ph/s and closed ~381 Ph/s, bottoming at 322 Ph/s and peaking at 571 Ph/s throughout the month. Pool hashrate distribution as of Dec 4: Poolin 35%, UUPool 32%, F2Pool 11.6%, lab.antpool.com 6.8%, BTC.com 2.8%, Luxor 2.3%, Coinmine 0.11%, BeePool 0.10%, suprnova 0.01% and others 9.45% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-Hashrate: November's hashrate opened at ~472 Ph/s and closed ~381 Ph/s, bottoming at 322 Ph/s and peaking at 571 Ph/s throughout the month. Pool hashrate distribution as of Dec 4:  Poolin 34.5%,UUPool 32.3%, F2Pool 11.6%, lab.antpool.com 6.8%, BTC.com 2.8%, Luxor 2.3%, Coinmine 0.11%, BeePool 0.10%, suprnova 0.01% and others 9.45% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
-
-
-Staking: 30-day average ticket price was 134.76 DCR (+2.46) per dcrstats.com. The price varied between 124.1-150.3 DCR. Locked amount was 5.3-5.48 million DCR, which corresponded to 49.6-51% of the available supply.
+Staking: 30-day average ticket price was 134.8 DCR (+2.5) per dcrstats.com. The price varied between 123.9-150.4 DCR. Locked amount was 5.29-5.49 million DCR, which corresponded to 49.50-51.15% of the available supply.
 
 The ticket price went up to 150.3 DCR. This is the highest it has been since the sdiff algorithm change.
 
-{helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now }
+Another spike of missed votes happened on [Nov 29](https://explorer.dcrdata.org/charts?chart=missed-votes&zoom=k0x6wa44-k3ucpasw&bin=window&axis=time).
 
-Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes per {new source?}. Version distribution: {vx.y.z: n% (+n%), ...}.
-
-{charts.dcr.farm is down}
-
-{any interesting analysis or events in the network}
+Nodes: Throughout [November](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1572566400000&to=1575158400000) there was an average of 189 public listening nodes and 398 normal nodes per dcr.farm. Version distribution: 73% use dcrd v1.4, 9.6% are dcrd v1.5 dev builds and RCs, 2% use dcrd v1.6 dev builds and 8.8% are dcrwallet v1.4.
 
 As of Dec 4, around 24% of PoS voters are signaling that they have upgraded and are ready to vote for the consensus rule change, per [dcrdata](https://explorer.dcrdata.org/agendas).
 
-Block 400k https://www.reddit.com/r/decred/comments/e0yvyb/block_400000/ {Is this significant ?}
+On Nov 24 Decred had its [400,000](https://www.reddit.com/r/decred/comments/e0yvyb/block_400000/) block.
 
 ## Mining
 
